# dprint-plugin-markdown-ja

./: Cargo.toml  LICENSE  README.md
src/: format_text.rs  lib.rs  wasm_plugin.rs
src/configuration/: builder.rs  resolve_config.rs  types.rs
src/generation/: gen_types.rs  generate.rs  metadata.rs  utils.rs
src/generation/cmark/: parse_cmark_ast.rs
src/generation/cmark/parsing/: common.rs  parse_image.rs  parse_link_reference.rs  parse_link_reference_definitions.rs
src/generation/common/: ast_nodes.rs  char_scanner.rs  mod.rs
tests/: newline_test.rs  spec_test.rs
tests/specs/Tables/: Tables_SkipFormatting.txt
tests/specs/Text/: Text_Japanese.txt  Text_Japanese_Zenkaku.txt
